# shadow_api

./: .gitignore  Cargo.toml  README.md  shadow_json_schema.json
src/: lib.rs  shadow_api.rs
src/shadow_api/: shadow_api_async.rs  shadow_api_replacer.rs  shadow_api_rewriter.rs  shadow_data.rs  shadow_data_cursor.rs  shadow_error.rs  shadow_json.rs
tests/: test.rs  test_edge_cases.rs
