[package]
name = "shadow_api"
version = "1.0.0"
edition = "2021"

[features]
default = []
async = ["dep:futures", "dep:pin-project-lite"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
serde_path_to_error = "0.1"
lol_html = "^0.3"
indexmap = {version = "1.9.1", features = ["serde-1"]}
regex = "1.7.1"
rand = "0.8.5"
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
